--- a/src/style/style.css
+++ b/src/style/style.css
@@ -73,6 +73,7 @@ form label {
   padding: 5px;
   letter-spacing: 0.5px;
   font-family: "Inter", sans-serif;
+  outline: none;
 }
 
 .content-app {
@@ -129,6 +130,6 @@ span {
 }
 
 span img {
-  width: 15px;
+  width: 16px;
   margin: 3px;
 }
