--- a/src/style/modal.css
+++ b/src/style/modal.css
@@ -52,3 +52,10 @@
   display: block;
   z-index: 5555;
 }
+
+/*responsive*/
+@media (max-width: 600px) {
+  .body-modal {
+    margin: 100px auto;
+  }
+}
