--- a/src/style/card-section.css
+++ b/src/style/card-section.css
@@ -7,10 +7,10 @@
 
 .main-card {
   border: 0.5px solid #ccc;
-  padding: 10px;
+  padding: 13px;
   border-radius: 5px;
   width: 245px;
-  margin: 11px;
+  margin: 7px;
   cursor: pointer;
 }
 
@@ -19,7 +19,7 @@
 }
 
 .country-card_name {
-  margin-bottom: 0;
+  margin: 0;
 }
 
 .country-card_capital {
@@ -54,4 +54,11 @@ span {
 span img {
   width: 16px;
   margin: 3px;
+}
+
+/*responsive*/
+@media (max-width: 600px) {
+  .main-card {
+    margin: 14px;
+  }
 }
